--- a/base/templates/inventory/inventory_list_component.html
+++ b/base/templates/inventory/inventory_list_component.html
@@ -18,9 +18,9 @@
                     <td>{{ obj.name|truncatechars:55 }}</td>
                     <td>{{ obj.category_name }}</td>
                     <td>{{ obj.current_stock }} PCS</td>
-                    <td>BDT {{ obj.purchase_price }}</td>
-                    <td>BDT {{ obj.sales_price }}</td>
-                    <td>BDT {{ obj.promotional_price }}</td>
+                    <td>NGN {{ obj.purchase_price }}</td>
+                    <td>NGN {{ obj.sales_price }}</td>
+                    <td>NGN {{ obj.promotional_price }}</td>
                     <td>{{ obj.created_at|time:'g:i:s A' }}</td>
                     <td>{{ obj.update_at|time:'g:i:s A' }}</td>
                     <td class="text-center">
