--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -73,6 +73,7 @@
             <ul class="treeview-menu">
                 <li><a href="{% url 'pos_view' %}"><i class="fa fa-circle-o"></i> Create Order</a></li>
                 <li><a href="{% url 'order_information' %}"><i class="fa fa-circle-o"></i> Order Record</a></li>
+                <li><a href="{% url 'cart_information' %}"><i class="fa fa-circle-o"></i> Cart Record</a></li>
             </ul>
         </li>
         <li class="treeview">
