--- a/base/templates/pos/bulling_information.html
+++ b/base/templates/pos/bulling_information.html
@@ -31,6 +31,10 @@
                             <label class="info-title" for="exampleInputEmail1">Your Address</label>
                             {{ form.address }}
                         </div>
+                        <div class="form-group">
+                            <label class="info-title" for="exampleInputEmail1">discount</label>
+                            <input type="number" name="discount" max="10" min="0" value="0">%
+                        </div>
                         <button type="submit"
                                 class="btn-upper btn btn-primary checkout-page-button">Confirm Order
                         </button>
