--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -31,7 +31,7 @@
             </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="{% url 'create_category' %}"><i class="fa fa-circle-o"></i> Add Category</a></li>
+                <li><a href="{% url 'create_category' %}"><i class="fa fa-circle-o"></i> Add Category</a></li> 
                 <li><a href="{% url 'category_list' %}"><i class="fa fa-circle-o"></i> All Category</a></li>
                 <li><a href="{% url 'create_list_tag' %}"><i class="fa fa-circle-o"></i> All Tag</a></li>
             </ul>
@@ -45,11 +45,11 @@
             </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="{% url 'inventory_create' %}"><i class="fa fa-circle-o"></i> Add Inventory</a></li>
+                <li><a href="{% url 'inventory_create' %}"><i class="fa fa-circle-o"></i> Add Inventory</a></li> 
                 <li><a href="{% url 'inventory_list' %}"><i class="fa fa-circle-o"></i> All Inventory</a></li>
             </ul>
         </li>
-        <li class="treeview">
+        <!-- <li class="treeview">
             <a href="#">
                 <i class="fa fa-product-hunt"></i>
                 <span>ATM</span>
@@ -61,7 +61,7 @@
                 <li><a href="{% url 'product_create' %}"><i class="fa fa-circle-o"></i> Perform task</a></li>
                 <li><a href="{% url 'product_list' %}"><i class="fa fa-circle-o"></i> All transactions</a></li>
             </ul>
-        </li>
+        </li> -->
         <li class="treeview">
             <a href="#">
                 <i class="fa fa-first-order"></i>
